added 3 more peragraph

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet cumque exercitationem nam, suscipit accusamus dicta commodi libero quos ab laborum inventore reprehenderit quod adipisci obcaecati eum possimus distinctio debitis modi.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet cumque exercitationem nam, suscipit accusamus dicta commodi libero quos ab laborum inventore reprehenderit quod adipisci obcaecati eum possimus distinctio debitis modi.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet cumque exercitationem nam, suscipit accusamus dicta commodi libero quos ab laborum inventore reprehenderit quod adipisci obcaecati eum possimus distinctio debitis modi.</p>
     
 </body>
 </html>
